fix: scrollbar css

--- a/src/styles/Courses.css
+++ b/src/styles/Courses.css
@@ -30,6 +30,10 @@
     grid-template-columns: repeat(3, 1fr);
     column-gap: 20px;
     row-gap: 16px;
+    scrollbar-face-color: #49D043;
+    /* Thumb color */
+    scrollbar-track-color: #181A18;
+
 }
 
 
@@ -59,13 +63,28 @@
 
     .courses-main-cards-inner {
         display: flex;
-        overflow-y: auto;
-        /* overflow-x: hidden; */
+        overflow-y: hidden;
+        overflow-x: auto;
         gap: 9px;
         padding-bottom: 14px;
-        scrollbar-color: #49D043 #181A18;
 
     }
+
+    .courses-main-cards-inner::-webkit-scrollbar {
+        display: flex;
+        height: 7px;
+        width: 5px;
+        border-radius: 17px;
+        border: 1px solid rgba(255, 255, 255, 0.09);
+        background-color: #181A18;
+    }
+
+    .courses-main-cards-inner::-webkit-scrollbar-thumb {
+        display: flex;
+        border-radius: 29px;
+        background-color: #49D043;
+    }
+
 }
 
 @media(width<420px) {}
